# Ellipsoid-Fitting-via-Least-Squares-with-Ellipsoid-Specific-Constraints-Li-Griffiths-2004-

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
data/: Fibia.csv  README.md  ellipsoid_3_2_1.csv  ellipsoid_rotated_offset.csv  oblate_spheroid.csv  prolate_spheroid.csv  unit_sphere_noisy.csv
docs/: _config.yml  api.md  data.md  examples.md  index.md  installation.md
examples/: basic_fit.py  fit_from_file.py
notebooks/: colab_demo.ipynb  ellipsoid_fitting_demo.ipynb
src/ellipsoid_fitting/: __init__.py  fit.py  utils.py  visualization.py
tests/: test_ellipsoid_fitting.py
