[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ellipsoid-fitting"
version = "0.1.0"
description = "Least-squares ellipsoid fitting with ellipsoid-specific constraints (Li & Griffiths, 2004)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["ellipsoid", "fitting", "least squares", "point cloud", "3D geometry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/QL-UoHull/Ellipsoid-Fitting-via-Least-Squares-with-Ellipsoid-Specific-Constraints-Li-Griffiths-2004-"
Documentation = "https://ql-uohull.github.io/Ellipsoid-Fitting-via-Least-Squares-with-Ellipsoid-Specific-Constraints-Li-Griffiths-2004-"
Repository = "https://github.com/QL-UoHull/Ellipsoid-Fitting-via-Least-Squares-with-Ellipsoid-Specific-Constraints-Li-Griffiths-2004-"

[tool.pytest.ini_options]
testpaths = ["tests"]
